add possibility to configure start component

--- a/src/hybrid/index.html
+++ b/src/hybrid/index.html
@@ -11,10 +11,6 @@
 </head>
 
 <body>
-
-  <messages>
-    Loading...
-  </messages>
-
+    <%= htmlWebpackPlugin.options.component %>
 </body>
 </html>
