--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <%= webpackConfig.htmlElements.headTags %>
   <% } %>
 
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/angular2-data-table/release/datatable.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/angular2-data-table/release/material.css" />
 </head>
 
 <body>
